hw1/task2/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
    name: vue-service
spec:
    selector:
        app: vue
    ports:
      - protocol: TCP
        port: 8080
        targetPort: 8080
