hw1/task2/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: task2-ingress
spec:
  rules:
  - host: sa.homework
    http:
      paths:
      - backend:
          serviceName: vue-service
          servicePort: 8080
  - host: api.sa.homework
    http:
      paths:
      - backend:
          serviceName: flask-service-task2
          servicePort: 9000
